RPN-869 (#22)
API Exception handling
