# openapi/protocol-union-model/src/main/kotlin/com/rarible/protocol/union/dto/IdParser.kt
@@ -7,7 +7,7 @@ object IdParser {
     fun parse(value: String): Pair<BlockchainDto, String> {
         val index = value.indexOf(DELIMITER)
         if (index < 0) {
-            throw IllegalArgumentException("Blockchain name not specified in ID: $value")
+            throw BlockchainIdFormatException("Blockchain name not specified in ID: $value")
         }
         val blockchain = value.substring(0, index)
         val id = value.substring(index + 1)
@@ -27,7 +27,7 @@ object IdParser {
         expectedSize: Int
     ) {
         if (parts.size != expectedSize) {
-            throw IllegalArgumentException(
+            throw BlockchainIdFormatException(
                 "Illegal format for ID: '$value', " +
                         "expected $expectedSize parts in ID, concatenated by '$DELIMITER'"
             )
